provide a link that will show the new idea in the theming page, make sure it is visible, and highlight it, open and close the question tabs view more smoothly, use special idea details mode to acknowledge the new idea and explain what happened

--- a/app/assets/stylesheets/ce/base.sass
+++ b/app/assets/stylesheets/ce/base.sass
@@ -174,3 +174,6 @@ div.ui-dialog
 		padding-left: 40px
 		li
 			margin-bottom: 8px
+			
+.overflow_hidden
+	overflow: hidden
