--- a/app/assets/stylesheets/ce/idea_details.sass
+++ b/app/assets/stylesheets/ce/idea_details.sass
@@ -55,6 +55,7 @@ div.idea_details
 		padding-top: 10px
 	li.theme_post_it, li.idea_post_it, li.question_post_it, li.team_post_it
 		list-style: none
+		margin-bottom: 30px
 		div.post-it
 			width: 350px
 		img.delete
@@ -79,6 +80,14 @@ div.idea_details
 			display: block
 			margin-bottom: 16px
 	
+	div.acknowledge_new_idea
+		a
+			font-weight: bold
+			color: #296d8A
+			text-decoration: none
+			&:hover
+				text-decoration: underline
+			
 	div.rater
 		background: $light_yellow_background
 		padding: 10px
